[metadata]
name = vertdetach
version = 0.1.0
author = Adam Vert
author_email = vertadam@gmail.com
description = DETACH (Device Temperature and Acceleration Change) algorithm for detecting non-wear from raw accelerometer data.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nimbal/vertdetach
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = vertdetach
python_requires = >=3.9
install_requires =
    numpy~=1.22.1
    pandas~=1.4.0
    scipy~=1.7.3
