[metadata]
name = nimbaldetach
version = attr: nimbaldetach.__version__
author = Adam Vert
author_email = vertadam@gmail.com
description = DETACH (Device Temperature and Acceleration Change) algorithm for detecting non-wear from raw accelerometer data.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nimbal/nimbaldetach
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = nimbaldetach
python_requires = >=3.9
install_requires =
    numpy>=1.22.1
    pandas>=1.4.0
    scipy>=1.7.3
